# htmlcpp

./: .gitignore  .gitmodules  CMakeLists.txt  HTMLC  HTMLC.h  HTMLC.in.h  Makefile  authors  compile_commands.json  hcl-config.json  htmlc.json  license  null.d  readme.md
include/: config.hh
lib/: ast.hpp  config.cc  config.cpp  config.hpp  entry.cc  htmlc.cc  htmlc.cpp  htmlc.hpp  parser.cpp  parser.hpp  util.cc  util.cpp
scripts/: build.sh  mupdate  run.sh  run0  run0.sh  run1  run1.sh  setupclone
test/t0/: htmlc.json
test/t0/views/templates/: about.html
test/t1/: htmlc.json
testdir/: htmlc.json
views/partials/: test.htmlc
